--- a/css/indexStyle.css
+++ b/css/indexStyle.css
@@ -1,25 +1,20 @@
 /*****Style sheet applied to the index.php file*******/
 .content{
 	width: 100%;	
-	justify-content: center;
-	display: flex;	
-
-
+	text-align: center;
 }
 
 .buttons{
 	display: flex;	
 	flex-direction: column;
 	width: 50%;
+	padding: 6px;
 	margin: 0 auto;
 	text-align: center;
-	
-
 }
 
 .indexBtns{
 	margin:0 auto;
-	margin-bottom: 3%;
 	padding: 15px;	
 	width: 50%;
 	font-size: 150%;
